# NovenoSemestre-public

AuxCompleja/: FuncArm.one
AuxCompleja/Final/: Content.tex  ExamenFinal.tex
Condensada2/Parcial1/: 8-2.md  Content.tex  Parcial1.tex
Condensada2/Parcial2/: Parcial2.nav  Parcial2.snm  Parcial2.tex
Didactica/: Lesson6.md  PreparacionClase.xlsx  T4.md
Didactica/Corto1/: Content.tex  Corto1.tex  ref.bib
Didactica/Lesson1/: Desmineralización.md
Didactica/Lesson2/: T3-4.md  T3.md
Didactica/Lesson3/: Content.tex  T5.tex  ref.bib
Didactica/UltimaTarea/: Content.tex  TareaFinal.tex
Lab/EfectoFotoelectrico/: Constante.csv
Lab/EfectoFotoelectrico/Codes/: README.md
Lab/EfectoFotoelectrico/Codes/histo/: Histo_for_colors.cpp  Verde.csv
Lab/Tareas/Tarea1/: Tarea1I.md  a.out  sizes.cpp
Lab/Tareas/Tarea1/I/: 32BitRep.cpp  a.out
Lab/Tareas/Tarea1/II/: vz
Lab/Tareas/Tarea1/II/pt2/: a.out  class02.cpp  persona.cpp  persona.hpp
Lab/Tareas/Tarea1/II/pt3/src/: VecR3.cpp  class03.cpp
Lab/Tareas/Tarea1/III/pt3/: CMakeLists.txt  class03.cpp
Lab/Tareas/Tarea1/III/pt3/include/: VecR3.hpp
Lab/Tareas/Tarea1/III/pt3/src/: VecR3.cpp
Lab/Tareas/Tarea2/: README.md  class01.cpp  simple.cpp  simple.hpp
RadIon/Proyecto/: Content.tex  RayosX_Jorge_Alejandro_Rodriguez_Aldana_201804766.tex  Ref1.bib
RelaGen/Expo2/: Preamble.tex  temp.tex
RelaGen/Expo2/Beamer/: Content.tex  Pres2.nav  Pres2.snm  Pres2.tex
RelaGen/Parcial1/: P1.tex  P2.tex  P3.tex  Parcial1-Jorge_Alejandro_Rodriguez_Aldana.tex  ref.bib
